# atom-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  convert.sh  flake.nix  list.txt  premake5.lua  readme.md  result  shell.nix  vcpkg.json
Source/Core/: CMakeLists.txt  Sandbox.cpp
Source/Core/Public/Atom/: Chrono.h  Containers.h  Contracts.h  Core.h  CoreAll.h  Events.h  Exceptions.h  Fmt.h  Hash.h  Invokable.h  Math.h  Memory.h  Preprocessors.h  Random.h  Range.h  Str.h  String.h  TTI.h  Uuid.h
Source/Core/Public/Atom/Containers/: ArrIter.h  ArrLit.h  ArrView.decl.h  ArrView.h  ArrayIterator.decl.h  ArrayIterator.h  ArrayLiteral.h  ArrayView.decl.h  ArrayView.h  BufArr.decl.h  BufArr.h  BufArray.decl.h  BufArray.h  Core.h  DynArr.decl.h  DynArr.h  DynamicArray.decl.h  DynamicArray.h  InitializerList.h  Insertable.h  InsertableReq.h  InsertableReqMock.h  Iterable.h  Iterables.h  Iterator.h  Iterators.h  IteratorsMock.h  Output.h  OutputMock.h  OutputReq.h  OutputReqMock.h  Range.h  RangeHelper.h  RangeReq.h  RangeReqMock.h  Ranges.h  RangesMock.h  Searcher.h  StaArr.decl.h  StaArr.h  (+13 more)
Source/Core/Public/Atom/Core/: ClassOf.h  Compiler.h  LangExtensions.h  Option.h  Platform.h  Primitives.h  Requirements.h  Result.h  SourceLineInfo.h  Storage.h  TypeList.h  UnionOf.h  Variant.h  _OptionImpl.h  _VariantImpl.h
Source/Core/Public/Atom/Exceptions/: Assertions.decl.h  Assertions.h  Exceptions.decl.h  Exceptions.h
Source/Core/Public/Atom/Fmt/: Fmt.h  Formatters.h
Source/Core/Public/Atom/Hash/: MD5HashGenerator.h  Md5Hash.h  Md5HashGenerator.h  Md5HashParser.h  Md5HashStringifier.h  SHA1HashGenerator.h  Sha1Hash.h  Sha1HashGenerator.h  Sha1HashParser.h  Sha1HashStringifier.h
Source/Core/Public/Atom/Invokable/: Event.h  Invokable.h  InvokableBox.h  InvokablePtr.h
Source/Core/Public/Atom/Math/: Core.h  Vector1.h  Vector2.h  Vector3.h
Source/Core/Public/Atom/Memory/: Atomic.h  DefaultMemAllocator.h  LegacyMemAllocator.h  LockGuard.h  Lockable.h  MemAllocator.h  MemHelper.decl.h  MemHelper.h  Mutex.h  NullLockable.h  ObjHelper.decl.h  ObjHelper.h  ObjectBox.h  SharedPtr.h  UniquePtr.h
Source/Core/Public/Atom/Range/: ArrIter.h  ArrRangeTrait.h  DynamicRangeTrait.h  InitList.h  InitializerList.h  IterReq.h  IterReqAssertions.h  IterReqChecks.h  IterReqMock.h  IterReqMocks.h  IterWrappers.h  JumpRangeTrait.h  MutArrRangeTrait.h  MutJumpRangeTrait.h  MutRangeTrait.h  Range.h  RangeComparer.h  RangeExtensions.h  RangeFinder.h  RangeHelper.h  RangeModifier.h  RangeReq.h  RangeReqChecks.h  RangeReqMock.h  RangeReqMocks.h  RangeTrait.h  RangeWrappers.h  StdIterWrapForAtomIter.h  _StdIter.h
Source/Core/Public/Atom/Str/: AsciiBufStr.decl.h  AsciiBufStr.h  AsciiDynamicStr.decl.h  AsciiDynamicStr.h  AsciiStaticStr.decl.h  AsciiStaticStr.h  AsciiStr.decl.h  AsciiStr.h  AsciiStrView.decl.h  AsciiStrView.h  BasicBufStr.decl.h  BasicBufStr.h  BasicDynamicStr.decl.h  BasicDynamicStr.h  BasicStaticStr.decl.h  BasicStaticStr.h  BasicStr.decl.h  BasicStr.h  BasicStrView.decl.h  BasicStrView.h  BufStr.decl.h  BufStr.h  DefaultEncoding.decl.h  DefaultEncoding.h  DynamicStr.decl.h  DynamicStr.h  StackStr.h  StaticStr.decl.h  StaticStr.h  Str.decl.h  Str.h  StrArgFormatters.h  StrConverter.h  StrFormatter.h  StrView.decl.h  StrView.h  StrViewConverter.h  _StrImpl.decl.h  _StrImpl.h
Source/Core/Public/Atom/String/: ASCIICharEncoding.h  ASCIICharEncodingConverters.h  ASCIIStringView.decl.h  ASCIIStringView.h  AsciiBufString.decl.h  AsciiBufString.h  AsciiDynamicString.decl.h  AsciiDynamicString.h  AsciiStaticString.decl.h  AsciiStaticString.h  AsciiString.decl.h  AsciiString.h  BasicBufString.decl.h  BasicBufString.h  BasicChar.h  BasicDynamicString.decl.h  BasicDynamicString.h  BasicStaticString.decl.h  BasicStaticString.h  BasicString.decl.h  BasicString.h  BasicStringView.decl.h  BasicStringView.h  BufString.decl.h  BufString.h  CharEncoding.h  CharEncodingConverter.h  CharEncodingException.h  DefaultEncoding.decl.h  DefaultEncoding.h  DynamicString.decl.h  DynamicString.h  Encoding.h  Selected.h  StaticString.decl.h  StaticString.h  String.decl.h  String.h  StringArgFormatters.h  StringConverter.h  (+12 more)
Source/Core/Public/Atom/Test/: CustomType.h  TrackedType.h
Source/Core/Public/Atom/Text/: AsciiEncoding.decl.h  AsciiEncoding.h  AsciiToAscii.h  BasicChar.h  BasicRune.h  EncodingException.decl.h  EncodingException.h  Utf16Encoding.decl.h  Utf16Encoding.h  Utf32Encoding.h  Utf8Encoding.h  _ConverterHelper.h  _LazyConverterHelper.h
Source/Core/Public/Atom/Uuid/: Uuid.h  Uuid3Generator.h  Uuid4Generator.h  Uuid5Generator.h  UuidConverter.h  UuidHelper.h  UuidParser.h  (+2 more)
Source/Core/Sandbox/: Sandbox.cpp
Source/Core/Tests/Containers/: TestDynamicArray.cpp
Source/Core/Tests/Core/: TestOption.cpp  TestVariant.cpp
Source/Core/Tests/Fmt/: TestFmt.cpp
Source/Core/Tests/Hash/: TestMD5HashGenerator.cpp  TestMd5Hash.cpp  TestMd5HashGenerator.cpp  TestSHA1HashGenerator.cpp  TestSha1Hash.cpp  TestSha1HashGenerator.cpp
Source/Core/Tests/Invokable/: TestEvent.cpp  TestInvokableBox.cpp
Source/Core/Tests/Memory/: TestMemHelper.cpp  TestObjectBox.cpp
Source/Core/Tests/Range/: TestIterWrappers.cpp  TestRangeHelper.cpp  TestRangeWrappers.cpp
Source/Core/Tests/String/: StringConverter.cpp  TestStringFormatter.cpp
Source/Core/Tests/Uuid/: TestUuid.cpp  TestUuid3Generator.cpp  TestUuid4Generator.cpp  TestUuid5Generator.cpp  TestUuidParser.cpp  TestUuidStringifier.cpp
Source/Engine/: CMakeLists.txt  premake.lua
Source/Engine/Private/: Application.cpp  Engine.cpp  Main.cpp
Source/Engine/Private/Window/: GLFWWindow.cpp  GLFWWindow.h  GlfwWindow.cpp  GlfwWindow.h  LinuxWindow.h  WindowManager.cpp  WindowsWindow.h
Source/Engine/Public/Atom/: Engine.h
Source/Engine/Public/AtomEngine/: Engine.h
Source/Logging/: CMakeLists.txt
Source/Logging/Private/: Logging.cpp
Source/Logging/Public/Atom/: Logging.h
Source/Logging/Tests/: TestLog.cpp
Source/Sandbox/: CMakeLists.txt  Sandbox.cpp  premake.lua
Source/Sandbox/Private/: Sandbox.cpp
(+844 files in other folders)
